Fix skills level crypto

--- a/index.html
+++ b/index.html
@@ -218,11 +218,18 @@
                     <div class="item">
                         <h3 class="level-title">React(in progress)</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="40%">
+                            <div class="level-bar-inner" data-level="30%">
                             </div>
                         </div>
                     </div>
                 
+                    <div class="item">
+                        <h3 class="level-title">Bitcoin(Theory and trying to figure out what/how to do more in this sector) in progress</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="15%">
+                            </div>
+                        </div>
+                    </div>
                     <div class="item">
                         <h3 class="level-title">Cryptocurrencies(Theory, Solidity and Haskell) in progress</h3>
                         <div class="level-bar">
