Fix skills bars

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <br>* Media Agency responsive websites and Web Reputation Tool. 
                         <br>Always interested in learning new technologies and in applying them. 
                         <br>I like to make decisions and say my opinion.
-                        <br>Passionate about cryptocurrencies, sector in which I would like to work.
+                        <br>Passionate about Bitcoin(..cryptocurrencies), sector in which I would love to work.
                                             </p>
                 </div>
             </section>
@@ -190,9 +190,9 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">Javascript &amp; jQuery</h3>
+                        <h3 class="level-title">Vanilla Javascript</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
                     <div class="item">
                         <h3 class="level-title">HTML5 &amp; CSS</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                     <div class="item">
                         <h3 class="level-title">Java</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
+                            <div class="level-bar-inner" data-level="60%">
                             </div>
                         </div>
                     </div>
@@ -244,7 +244,7 @@
                 <h2 class="section-title"><i class="fa fa-leanpub"></i>Learning in progress</h2>
                 <div class="skillset">
                     <div class="item">
-                        <h3 class="level-title">Bitcoin(and less Cryptocurrencies)"</h3>
+                        <h3 class="level-title">Bitcoin(and less Cryptocurrencies)</h3>
                     </div>
                     <div class="item">
                         <h3 class="level-title">Django 4 and Python 3</h3>
