Fix typo and eng errors

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                         <br>* Publishing industry
                         <br>* Bank Crm development+maintenance
                         <br>* Media Agency responsive websites and Web Reputation Tool. 
-                        <br>Always interested in learning new technologies and in applying them. 
-                        <br>I like to make decisions and say my opinion.
-                        <br>Passionate about Bitcoin(..cryptocurrencies), sector in which I would love to work.
-                                            </p>
+                        <br>Always interested in learning new technologies and applying them. 
+                        <br>I like to make decisions and tell my opinion.
+                        <br>I'm fond of Bitcoin world and I'd love to work in this field.
+                    </p>
                 </div>
             </section>
             
@@ -125,7 +125,7 @@
                         <a href="https://www.gruppoathesis.it/"><div class="company">Publishing group Athesis, Verona Italy</div></a>    
                     </div>
                     <div class="details">
-                        <p>My focus is the develop and mantaince three newspapers websites.Eg: <a href="https://www.larena.it/">https://www.larena.it/</a> 
+                        <p>My focus is developing and mantaince of three newspapers websites.Eg: <a href="https://www.larena.it/">https://www.larena.it/</a> 
                             <br>Part of the system in Java 1.7 + Apache Velocity. 
                             <br>Registration and store in Django-Python.
                             <a href="https://store.larena.it/">https://store.larena.it/</a>.
@@ -151,9 +151,9 @@
                     </div>
                     <div class="details">
                         <p>Fullstack developer in bank sector. 
-                            I <b>magage remotly a group of up to 10 developers</b> writing also Technical Analysis. 
+                            I <b>managed remotly a group of up to 10 developers</b> writing also Technical Analysis. 
                             <br>
-                            Create both Java EE APi, POJO to SQL Store Procedure and FE Dojo/JQuery Ajax call 
+                            I created both Java EE APi, POJO to SQL Store Procedure and FE Dojo/JQuery Ajax call 
                             to Rest API. 
                             <br>
                             Two projects for banks: 
