--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Senior Software Engineerr</h3>
+                            <h3 class="job-title">Senior Software Engineer</h3>
                             <div class="time">July 2018 - Present</div>
                         </div>
                         <a href="https://www.gruppoathesis.it/"><div class="company">Publishing group Athesis, Verona Italy</div></a>    
