Fix typo comment Django

--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
                             </div>
                         </div>
                     </div>
-                    {% comment %} <div class="item">
+                    <!-- <div class="item">
                         <h3 class="level-title">Cryptocurrencies(Theory, Solidity and Haskell) in progress</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="10%">
                             </div>
                         </div>
-                    </div> {% endcomment %}
+                    </div> -->
                     
                 </div>
             </section>
